wordsmithing tn loading intro

--- a/docs/total-nitrogen-loading.Rmd
+++ b/docs/total-nitrogen-loading.Rmd
@@ -10,7 +10,7 @@ load(file = here('data/popdat.RData'))
 
 ## Total Nitrogen Loading
 
-In 2011, the Florida Department of Environmental Protection approved regulatory thresholds for nutrients that apply to major segments of Tampa Bay.  These criteria describe a threshold at which nutrient loads exceeding that amount may have a negative impact on environmental resources.  These thresholds are defined for ratios of total nitrogen (nutrient load) to the volume of water (hydrologic load) entering the bay, which accounts for naturally changing loads with variation in precipitation.  Each year, the Tampa Bay Nitrogen Management Consortium assesses progress in achieving the regulatory thresholds.  This is accomplished through regular reporting of load estimates by the Tampa Bay Estuary Program.  To date, nitrogen and hydrologic load ratios continue to decline throughout the Bay, indicating that the Nitrogen Management Consortium has been effective in implementing management actions that limit nutrient inputs. 
+In 2011, the Florida Department of Environmental Protection approved regulatory thresholds for nutrients that apply to major segments of Tampa Bay.  These criteria describe a point at which nutrient loads exceeding that amount may have a negative impact on environmental resources.  These thresholds are defined for ratios of total nitrogen (nutrient load) to the volume of water (hydrologic load) entering the bay, which accounts for naturally changing loads with variation in rainfall.  Each year, the Tampa Bay Nitrogen Management Consortium assesses whether or not conditions are within allowable limits.  This is accomplished through regular reporting of load estimates by the Tampa Bay Estuary Program.  To date, nitrogen and hydrologic load ratios continue to decline throughout the Bay, indicating that the Nitrogen Management Consortium has been effective at reducing nutrient inputs. 
 
 ```{r}
 p <- ldtot_plo(totanndat, yval = 'tnhy', levs = c('Old Tampa Bay', 'Hillsborough Bay', 'Middle Tampa Bay', 'Lower Tampa Bay'), 
