--- a/docs/total-nitrogen-loading.Rmd
+++ b/docs/total-nitrogen-loading.Rmd
@@ -1,7 +1,7 @@
 <!-- # Clean Waters & Sediments -->
 
 ```{r setup, warning = F, message = F, echo = F}
-source(here::here('doc/setup.R'))
+source(here::here('docs/setup.R'))
 
 # from https://github.com/tbep-tech/load-estimates
 load(file = here('data/totanndat.RData'))
