--- a/docs/tampa-bay-benthic-index.Rmd
+++ b/docs/tampa-bay-benthic-index.Rmd
@@ -1,7 +1,7 @@
 <!-- # Clean Waters & Sediments -->
 
 ```{r setup, warning = F, message = F, echo = F}
-source(here::here('docs/setup.R'))
+source(here::here('R/setup.R'))
 
 maxyr <- 2019
 seg <- c('OTB', 'HB', 'MTB', 'LTB', 'All (wt)')
