tampa bay nekton index html done

--- a/docs/tampa-bay-nekton-index.Rmd
+++ b/docs/tampa-bay-nekton-index.Rmd
@@ -1,9 +1,33 @@
 <!-- # Thriving Habitats and Abundant Wildlife -->
 
+
+```{r setup, warning = F, message = F, echo = F}
+source(here::here('R/setup.R'))
+
+maxyr <- 2020
+tbniscr <- anlz_tbniscr(fimdata)
+tbniave <- anlz_tbniave(tbniscr)
+
+tbnidsc <- tbniave %>% 
+  filter(Year == maxyr) %>% 
+  select(bay_segment, Segment_TBNI) %>% 
+  tibble::deframe()
+```
+
 ## Tampa Bay Nekton Index
 
-The nekton index, which is similar to the water quality scorecard, uses data from the State’s Fisheries Independent Monitoring Program (FWC - FWRI) to track trends for representative species. With samples dating back to 1989, the long-term record can be related to water quality and habitat characteristics to identify factors affecting health of bay fisheries. The index evaluates catch data relative to habitat use, species composition and diversity, and feeding dynamics to understand trends in the fish community.
+The nekton index, which is similar to the water quality scorecard, uses data from the State’s Fisheries Independent Monitoring Program (FWC - FWRI) to track trends for representative species. With samples dating back to 1998, the long-term record can be related to water quality and habitat characteristics to identify factors affecting health of bay fisheries. The index evaluates catch data relative to habitat use, species composition and diversity, and feeding dynamics to understand trends in the fish community.
 
-An annual "snapshot" of ecological health helps fisheries managers target efforts to improve habitat or other factor. The long-term results for the nekton index suggest the fish community is resistant to large-scale changes and resilient to episodic disturbance. For example, "Yellow" cautionary scores were observed in the mid-2000s and 2010/11 when red tide conditions and cold snaps may have affected the bay fish community. Recent conditions suggest the fish community is in a healthy state, with all four major bay segments receiving "green" scores the past four years.
+An annual "snapshot" of ecological health helps fisheries managers target efforts to improve habitat or other factor. The long-term results for the nekton index suggest the fish community is resistant to large-scale changes and resilient to episodic disturbance. For example, "Yellow" cautionary scores were observed in the mid-2000s and 2010/11 when red tide conditions and cold snaps may have affected the bay fish community. Recent conditions suggest the fish community is in a healthy state, with all four major bay segments receiving "green" scores the past four years.  Long-term trends in nekton index scores by bay segment are shown below.
 
-Results in 2020 showed that ... automate
+```{r}
+p <- show_tbniscr(tbniscr, family = fml, width = 800, height = 350, plotly = T)
+div(p, align = 'center')
+```
+
+Results in 2020 showed that all bay segments received a "Green" stay the course outcome, excluding Hillsborough Bay which received a "Yellow" caution outcome.  The bay segment average nekton index score in 2020 was `r tbnidsc['OTB']` for Old Tampa Bay, `r tbnidsc['HB']` for Hillsborough Bay, `r tbnidsc['MTB']` for Middle Tampa Bay, and `r tbnidsc['LTB']` for Lower Tampa Bay.
+
+```{r}
+p <- show_tbnimatrix(tbniscr, width = 350, height = 600, plotly = T, family = fml)
+div(p, align = 'center')
+```
