--- a/docs/habitat-restoration.Rmd
+++ b/docs/habitat-restoration.Rmd
@@ -1,26 +1,40 @@
+---
+output:
+  html_document:
+    css: "styles.css"
+---
+
 <!-- # Thriving Habitats and Abundant Wildlife -->
+
+```{r setup, warning = F, message = F, echo = F}
+source(here::here('R/setup.R'))
+
+rstdat <- read_sheet('1ml7CJAH6LtAsbi9l4IZULAqsZRzToWIjTX_THAOpOdc')
+```
 
 ## Restoration Projects to Improve Tampa Bay’s Natural Systems
 
 Habitat restoration is an attempt to restore important services provided by natural systems. These ecological services can include providing fish nurseries; improving water quality; reducing erosion; and storm surge protection. This can involve a variety of habitat types, from salt marshes to pine flatwoods. 
 
-Habitat restoration in the Tampa Bay region has evolved over time from a simple planting of red mangroves west of the Howard Frankland bridge in 1971 to major landscape-scale ecosystem restoration projects such as Rock Ponds, that involved 1,043 acres of landform changes on regionally significant tracts of coastal land. Nearly 5,000 acres of habitat restoration has occurred in the Tampa Bay watershed since 1971.
+Habitat restoration in the Tampa Bay region has evolved over time from a simple planting of red mangroves west of the Howard Frankland bridge in 1971 to major landscape-scale ecosystem restoration projects such as Rock Ponds, that involved 1,043 acres of landform changes on regionally significant tracts of coastal land. Nearly 5,000 acres of habitat restoration has occurred in the Tampa Bay watershed since 1971. Tampa Bay restoration professionals often work to create or restore a mosaic of habitats to reflect the variety seen in natural systems.
 
-Tampa Bay restoration professionals often work to create or restore a mosaic of habitats to reflect the variety seen in natural systems.
+```{r}
+rstdat_tab(rstdat)
+```
 
 To continue the improvements that have occurred, the Habitat Master Plan (2020 Update) includes a target of restoring 3,150 acres of wetlands and uplands by 2030:
 
--50 acres of oyster reefs
+* 50 acres of oyster reefs
 
--1,000 acres of tidal wetlands, such as salt marshes, salt barrens, and mangroves
+* 1,000 acres of tidal wetlands, such as salt marshes, salt barrens, and mangroves
 
--1,500 acres of freshwater wetlands, including freshwater marshes, wet prairies, and cypress forests
+* 1,500 acres of freshwater wetlands, including freshwater marshes, wet prairies, and cypress forests
 
--600 acres of uplands, including coastal hammocks and pine flatwoods
+* 600 acres of uplands, including coastal hammocks and pine flatwoods
 
 2020 Tampa Bay Habitat Master Plan Update: https://drive.google.com/file/d/1Hp0l_qtbxp1JxKJoGatdyuANSzQrpL0I/view
 
-Restoration opportutunities by segment: https://github.com/tbep-tech/hmpu-workflow
+Restoration opportunities by segment: https://github.com/tbep-tech/hmpu-workflow
 
 Habitat restoration table (needs to be updated with past 2-3 years of GPRA data): https://drive.google.com/file/d/1zVx18P6lrPuVR6ANMAetBRXwxCGeCN9b/view?usp=sharing 
 
