--- a/docs/behavior-change.Rmd
+++ b/docs/behavior-change.Rmd
@@ -4,7 +4,7 @@
 
 Pipe Up! is TBEP’s latest community-based social marketing campaign, aimed at encouraging homeowners and home buyers to inspect, repair, or replace aging private lateral sewer lines to prevent sanitary sewer overflows into Tampa Bay and its watershed.
 
-#LoveTampaBay is a hashtag campaign supported by folks that live, work and play in Tampa Bay, with over 7k posts on Instagram. The cinematic & serene content produced by members of this digital community feeds TBEP's "Life in the Bay" video series. 
+\#LoveTampaBay is a hashtag campaign supported by folks that live, work and play in Tampa Bay, with over 7k posts on Instagram. The cinematic & serene content produced by members of this digital community feeds TBEP's "Life in the Bay" video series. 
 
 TBEP keeps the "Scoop that Poop!" campaign alive by making outreach materials available to pet owners and interested campaign ambassadors upon request.
 
