--- a/docs/reach-index.Rmd
+++ b/docs/reach-index.Rmd
@@ -1,5 +1,42 @@
 <!-- # Informed, Engaged, Responsible Community -->
 
+```{r setup, warning = F, message = F, echo = F}
+source(here::here('R/setup.R'))
+load(file = here('data/comdat.RData'))
+maxyr <- 2021
+```
+
 ## Reach Index
 
 Being heard in an increasingly noisey digital landscape is harder now than ever before. TBEP uses social networking platforms to reach new audiences and maintain itentional communication with the online community. Through engagement-driven messaging, innovative mediums, and adaptive tinkering, the Program amplifies its messages, makes science accessible to the general public, and elevates awareness of its partners actions.
+
+### FACEBOOK IN `r maxyr`
+
+```{r}
+reach_tab(comdat, platform = 'TBEP Facebook', maxyr = maxyr, chg = F)
+```
+
+### INSTAGRAM IN `r maxyr`
+
+```{r}
+reach_tab(comdat, platform = 'TBEP IG', maxyr = maxyr, chg = F)
+```
+
+### YOUTUBE IN `r maxyr`
+
+```{r}
+reach_tab(comdat, platform = 'TBEP YouTube', maxyr = maxyr, chg = F)
+```
+
+### UNSPLASH PHOTO SHARING IN `r maxyr`
+
+```{r}
+reach_tab(comdat, platform = 'TBEP Unsplash', maxyr = maxyr, chg = F)
+```
+
+### EMAIL MARKETING
+
+```{r}
+ccreach_tab(comdat, maxyr = maxyr)
+```
+
